--- a/demo-security/src/main/resources/application.properties
+++ b/demo-security/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.open-in-view= true
 # THYMELEAF
 spring.thymeleaf.cache= false
 
+# TEMPO DE SESSÂO
+server.servlet.session.timeout=1m
+
 #JAVAMAIL
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
@@ -20,4 +23,3 @@ spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
 spring.mail.test-connection= true
-
