--- a/social/pom.xml
+++ b/social/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-mysql</artifactId>
+      <version>2.9.1.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
