--- a/social/pom.xml
+++ b/social/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>quarkus-jdbc-mysql</artifactId>
       <version>2.9.1.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
