--- a/social/src/main/resources/application.properties
+++ b/social/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-# Banco de dados
+# Global
 quarkus.datasource.db-kind=mysql 
 quarkus.datasource.username=root
 quarkus.datasource.password=123456
-
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/social?useTimezone=true&serverTimezone=America/Sao_Paulo&useSSL=false
 quarkus.datasource.jdbc.max-size=16
+
+# Test
+%test.quarkus.datasource.db-kind=h2 
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=sa
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:social
+%test.quarkus.datasource.jdbc.max-size=16
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
