--- a/social/src/main/resources/application.properties
+++ b/social/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-quarkus.datasource.db-kind=h2 
-quarkus.datasource.username=sa
-quarkus.datasource.password=sa
-quarkus.datasource.jdbc.url=jdbc:h2:mem:social
+# Database
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=admin
+quarkus.datasource.password=admin
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/social
+
+quarkus.hibernate-orm.database.generation=update
 quarkus.datasource.jdbc.max-size=16
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
