--- a/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.show-sql=true
-#http://localhost:8080/h2-console/
-
 #-- MySQL --
 spring.datasource.url=jdbc:mysql://localhost:3306/courses
 spring.datasource.username=root
@@ -13,7 +5,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 server.error.include-message=never
